<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.devahmed.demo.animeapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_fullscreenActivity"
            app:destination="@id/fullscreenActivity"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.devahmed.demo.animeapp.ui.MobileImages.MoblieSizesFragment"
        android:label="@string/title_mobile_walls"
        tools:layout="@layout/fragment_mobileimages" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.devahmed.demo.animeapp.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_notifications_to_searchResultActivity"
            app:destination="@id/searchResultActivity" />
    </fragment>
    <activity
        android:id="@+id/fullscreenActivity"
        android:name="com.devahmed.demo.animeapp.ui.FullScreen.FullscreenActivity"
        android:label="activity_fullscreen"
        tools:layout="@layout/activity_fullscreen" />
    <fragment
        android:id="@+id/addImageFragment"
        android:name="com.devahmed.demo.animeapp.ui.AddImages.AddImageFragment"
        android:label="fragment_add_image"
        tools:layout="@layout/fragment_add_image" />
    <activity
        android:id="@+id/searchResultActivity"
        android:name="com.devahmed.demo.animeapp.ui.search.SearchResultActivity"
        android:label="activity_search_result"
        tools:layout="@layout/activity_search_result" />
</navigation>